# mkdocs-multirepo

./: .gitignore  LICENSE  README.md  pyproject.toml
mkdocs_multirepo/: __init__.py
mkdocs_multirepo/demo/: config.yml  index.html  index.tpl  styles.css
