# 1. Install poetry from python-poetry.org
# 2. poetry build
# 3. poetry publish

[tool.poetry]
name = "mkdocs-multirepo"
version = "0.5.1"
description = ""
authors = ["Lars Wilhelmer", "Jozef Fulop"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3"
beautifulsoup4 = "^4.9"
click = "^7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
mkdocs-multirepo = 'mkdocs_multirepo:cli'